test/expected/explain_uc8.out
explain unsigned char8_t x
                 ^
18: error: "unsigned char8_t" is illegal for built-in type
